# internal/adapters/transport/http/routers/validate.go
@@ -6,11 +6,12 @@ import (
 	"errors"
 	"fmt"
 	"net/mail"
+	"slices"
 )
 
 func ValidateUserReq(user dto.UpdateUserReq) error {
 	if user.ID == 0 {
-		return fmt.Errorf("user id field is reqired")
+		return errors.New("user id field is reqired")
 	}
 	if len(user.Name) == 0 {
 		return errors.New("user name field is reqired")
@@ -19,10 +20,15 @@ func ValidateUserReq(user dto.UpdateUserReq) error {
 	if len(user.Name) < 4 || len(user.Name) > 72 {
 		return models.ErrInvalidName
 	}
-	return nil
+
+	if len(user.Role) == 0 {
+		return errors.New("user role field is reqired")
+	}
+
+	return ValidateRole(user.Role)
 }
 
-func ValidateCredentials(name, email, password string) error {
+func ValidateCredentials(name, email, password, role string) error {
 	// Name check
 	if len(name) == 0 {
 		return models.ErrEmptyName
@@ -47,5 +53,16 @@ func ValidateCredentials(name, email, password string) error {
 		return models.ErrInvalidPassword
 	}
 
+	if err := ValidateRole(role); err != nil {
+		return err
+	}
+
 	return nil
+}
+
+func ValidateRole(role string) error {
+	if slices.Contains([]string{models.AdminRole, models.UserRole}, role) {
+		return nil
+	}
+	return fmt.Errorf("%w: %s", models.ErrInvalidRole, role)
 }
