# internal/domain/models/errors.go
@@ -11,10 +11,12 @@ var (
 	ErrExpToken           = errors.New("token expired")
 	ErrNotUniqueEmail     = errors.New("email is not unique")
 	ErrInvalidPassword    = errors.New("password must be in range of 8 and 72 bytes")
+	ErrInvalidRole        = errors.New("role is not valid")
 	ErrInvalidName        = errors.New("name must be in range of 4 and 72 bytes")
 	ErrPermissionDenied   = errors.New("permission denied")
 	ErrUnexpected         = errors.New("internal server error: failed to handle incoming HTTP request")
 	ErrTokenGenerateFail  = errors.New("failed to generate new token")
 	ErrUserModelInvalid   = errors.New("user model is invalid")
 	ErrCannotDeleteSelf   = errors.New("you cannot delete your own account while logged in as admin")
+	ErrCannotCreateAdmin  = errors.New("admin can be created only with CLI")
 )
